<resources>
    <string name="app_name">Food Route</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txtPlatillo">Plato: </string>
    <string name="txtLugar">Lugar: </string>
    <string name="txtPrecio">Precio: </string>
    <string name="txtRestaurante">Nombre: </string>
    <string name="txtHoraApertura">Hora apertura: </string>
    <string name="txtHoraCierre">Hora cierre: </string>

    <string name="txtTituloBuscar">Nueva Búsqueda </string>
    <string name="txtPresupuesto">Presupuesto </string>
    <string name="txtTipodeComida">Tipo de Comida </string>
    <string name="txtTipodePago">Forma de Pago </string>
    <string name="txtEfectivo">Efectivo </string>
    <string name="txtTarjeta"> Efectivo y Tarjeta </string>
    <string name="txtAmbos">Ambos </string>
    <string name="txtBuscar">Buscar</string>
    <string name="txtActualizado">Información actualizada a 05/11/2017</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="borrar_historial">Borrar historial</string>

    <string name="bn_inicio">Inicio</string>
    <string name="bn_especialidad">Especialidad</string>
    <string name="bn_historial">Historial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
