<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context="com.example.hd.foodroute_v1.Buscar">

        <!-- Here you put the rest of your current view-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTituloBuscar"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/tituloBuscar"
                android:textSize="18dp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPresupuesto"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    />

                <EditText
                    android:id="@+id/txtpresupuesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="5"
                    android:inputType="numberDecimal"
                    android:textColor="@color/clr_Itm_Padre"

                    android:backgroundTint="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                >

                <TextView
                    android:id="@+id/txt_tipoComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTipodeComida"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    />

                <Spinner
                    android:id="@+id/spnrTipoComida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/clr_Letra"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txtTipodePago"
                        android:paddingBottom="5dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        />

                    <RadioButton
                        android:id="@+id/rbtnEfectivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txtEfectivo"
                        android:textColor="@color/clr_Itm_Padre"
                        android:buttonTint="@color/colorPrimaryDark"
                        />

                    <RadioButton
                        android:id="@+id/rbtnEfecivo_Tarjeta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/clr_Itm_Padre"
                        android:text="@string/txtTarjeta"
                        android:buttonTint="@color/colorPrimaryDark"
                        />

                </RadioGroup>
            </LinearLayout>


            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawablePadding="8dp"
                android:elevation="2dp"
                android:paddingRight="20dp"
                android:text="Buscar"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                />

        </LinearLayout>

</LinearLayout>
    </ScrollView>