<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.github.snowdream.android.widget.SmartImageView
        android:id="@+id/imgResultado"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="74dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="0dp"
        android:text="@string/txtPlatillo"
        android:textColor="@color/colorTexto"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLugar"
        android:textColor="@color/colorTexto"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="66dp"
        app:layout_constraintLeft_toLeftOf="@+id/imgResultado"
        android:layout_marginStart="56dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPrecio"
        android:textColor="@color/colorTexto"
        android:textStyle="bold"
        android:layout_marginLeft="74dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        android:layout_marginStart="56dp" />

    <TextView
        android:id="@+id/txtNombrePlatillo"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorTexto"
        android:layout_marginLeft="136dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="115dp" />

    <TextView
        android:id="@+id/txtPrecio"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:text="TextView"
        android:textColor="@color/colorTexto"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="115dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp" />

    <TextView
        android:id="@+id/txtLugar"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorTexto"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="136dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="115dp" />


</android.support.constraint.ConstraintLayout>
