<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/DatosRestaurnte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardCornerRadius="4dp"
        android:background="#FFF"
        android:smoothScrollbar="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <com.github.snowdream.android.widget.SmartImageView
        android:id="@+id/imgSugerencia"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/txtPlatillo"
                android:textColor="@color/colorTexto"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNombrePlatillo"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorTexto"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLugar"
                android:textColor="@color/colorTexto"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/txtLugar"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorTexto"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPrecio"
                android:textColor="@color/colorTexto"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/colorTexto"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                 />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>